# speak-to-file

./: CHANGELOG.md  README.md  ReadMe.md  setup.cfg  setup.py  speak_to_file.py
speak_to_file/: __main__.py  speak_to_file.py
tests/: tests.py
