[metadata]
name = speak_to_file
version = 0.4.0
description = Speak and transcode text in a single step
url = https://github.com/Bugzey/speak-to-file
author = Radoslav Dimitrov
author_email = radddi@abv.bg
license = GPLv3

[options]
packages = find:
install_requires =
	docopt
zip_safe = True

[options.packages.find]
exclude=tests

[options.entry_points]
console_scripts = 
	speak_to_file=speak_to_file.speak_to_file:main

